<resources>
    <string name="app_name">Labiofam-android</string>
    <string name="google_map_api_key">AIzaSyA0FoPwKxx8NXAElQQrw9CNBN59cQiBI2U</string>
    <string name="contacts_btn">Contactos</string>
    <string name="byProducts_btn_text">Subproductos</string>
    <string name="services_btn_text">Servicios</string>
    <string name="categories_text">Categorías</string>
    <string name="name_text">Nombre</string>
    <string name="age_text">Edad</string>
    <string name="position">Cargo</string>
    <string name="services_text">Servicios</string>
    <string name="bioproducts_text">Bioproductos</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="phone_number_text">Número de Teléfono</string>
    <string name="facebook_account">JCarlosPG00</string>
    <string name="linkedin_account"></string>
    <string name="telegram_account"></string>
    <string name="Biofertilizantes">Biofertilizantes</string>
    <string name="Bioplaguicidas">Bioplaguicidas</string>
    <string name="Biolarvicidas">Biolarvicidas</string>
    <string name="Bioestimulantes">Bioestimulantes</string>
    <string name="Biofuncidas">Biofungicidas</string>
    <string name="address">10.2.2</string>


</resources>