<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="4dp"
    app:cardCornerRadius="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/contact_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp">

        </ImageView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/name_text"
                android:textSize="14sp"
                android:layout_marginVertical="6dp">

            </TextView>

            <TextView
                android:id="@+id/contact_age"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/age_text"
                android:textSize="14sp"
                android:layout_marginVertical="6dp">

            </TextView>

            <TextView
                android:id="@+id/contact_position"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:textSize="14sp"
                android:layout_marginVertical="6dp">

            </TextView>

            <TextView
                android:id="@+id/contact_phone_number"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_text"
                android:textSize="14sp"
                android:layout_marginVertical="6dp">

            </TextView>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>