<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    tools:context=".MainActivity">
    <Button
        android:id="@+id/pv_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Puntos de Venta"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/services_btn"
        tools:layout_editor_absoluteY="119dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/services_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:onClick="zopenServices"
        android:text="@string/services_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/pv_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </Button>

    <Button
        android:id="@+id/contacts_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacts_btn"
        android:textColor="@color/black"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pv_btn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:layout_editor_absoluteY="16dp">
    </Button>

    <Button
        android:id="@+id/bioproducts_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bioproducts_text"
        android:textColor="@color/black"
        style="?android:attr/borderlessButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contacts_btn"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        tools:layout_editor_absoluteY="16dp">
    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>

